clean up repo for submission

--- a/notebooks/pipeline_benchmark_ovules.ipynb
+++ b/notebooks/pipeline_benchmark_ovules.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "89a779c7",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +10,7 @@
     "import numpy as np\n",
     "import imageio\n",
     "from cellpose import models\n",
+    "from cellpose import utils as cp_utils\n",
     "from cellstitch.pipeline import *\n",
     "from cellstitch.evaluation import *\n",
     "from cellstitch.utils import *\n",
@@ -18,8 +18,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = \"ovules_subsampled\" # or ovules_subsampled"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5ebc104b",
    "metadata": {},
    "source": [
     "# Pipeline Benchmark\n",
@@ -39,8 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "13873663",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d041191b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da31239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +87,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1365e866",
    "metadata": {},
    "source": [
     "### Train cellpose model from scratch\n",
@@ -91,8 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "50ca5eb1",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c99fb7d0",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7fe4777",
    "metadata": {},
    "source": [
     "`python -m cellpose --train --dir ../DATA/ovules/cellpose_train --pretrained_model None --n_epochs 100  --verbose` "
@@ -150,7 +151,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2df6be",
    "metadata": {},
    "source": [
     "### Generate cellpose3d results"
@@ -158,8 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "32484df9",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,18 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7380b789",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ovules_folder = \"../DATA/ovules_subsampled\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d9ddf488",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,24 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "62938db3",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_294_final_crop_ds2.npy\n",
-      "Starting N_435_final_crop_ds2.npy\n",
-      "Starting N_441_final_crop_ds2.npy\n",
-      "Starting N_511_final_crop_ds2.npy\n",
-      "Starting N_522_final_crop_ds2.npy\n",
-      "Starting N_590_final_crop_ds2.npy\n",
-      "Starting N_593_final_crop_ds2.npy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for test_filename in test_filenames: \n",
     "    print(\"Starting %s\" % test_filename)\n",
@@ -217,7 +190,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aabc52e1",
+   "metadata": {},
+   "source": [
+    "### Generate cellpose2d results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for test_filename in test_filenames: \n",
+    "    print(\"Starting %s\" % test_filename)\n",
+    "    img = np.load(\"../DATA/%s/raw/%s\" % (dataset, test_filename)) \n",
+    "    masks, _, _ = model.eval(list(img), do_3D=False, flow_threshold=flow_threshold, channels = [0,0])\n",
+    "    masks = cp_utils.stitch3D(np.array(masks))\n",
+    "    \n",
+    "    np.save(\"./results/%s/cellpose2d/%s\" % (dataset, test_filename), masks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Generate cellstitch results"
@@ -225,183 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "af7cf76b",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_294_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_441_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_511_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_522_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_590_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_593_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n",
-      "WARNING: no mask pixels found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for test_filename in test_filenames: \n",
     "    print(\"Starting %s\" % test_filename)\n",
@@ -423,199 +243,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ae7af94",
    "metadata": {},
    "source": [
-    "# Ovules with High Anistropy "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb433ecb",
-   "metadata": {},
-   "source": [
-    "### PlantSeg\n",
-    "- activate the environment: `conda activate plant-seg` \n",
-    "- make sure to set the `path` in plantseg.yaml to `../data/ovules_subsampled/plantseg_test/`\n",
-    "- perform segmentation with the `confocal_unet_bce_dice_ds1x` by running `plantseg --config plantseg.yaml`"
+    "# benchmark results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc74e095",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plantseg_results_folder = \"../data/ovules_subsampled/plantseg_test/PreProcessing/confocal_unet_bce_dice_ds1x/MultiCut/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0980192a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for test_filename in test_filenames: \n",
-    "    print(\"Starting %s\" % test_filename) \n",
-    "    \n",
-    "    with h5py.File(\"%s/%s_predictions_multicut.h5\" % (plantseg_results_folder, test_filename), \"r\") as f:\n",
-    "        plantseg = np.array(list(f['segmentation'])) \n",
-    "        \n",
-    "    plantseg[np.where(plantseg == 1)] = 0 # plantseg use 1 as labels\n",
-    "    np.save(\"./results/ovules_subsampled/pipeline/plantseg/%s.npy\" % test_filename, plantseg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f80cf2eb",
-   "metadata": {},
-   "source": [
-    "### Generate cellpose3d results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "132858bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_dir = '../data/ovules/cellpose_train/models/cellpose_residual_on_style_on_concatenation_off_cellpose_train_2022_09_19_14_23_42.578556'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00cc263a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subsampled_ovules_folder = \"../data/ovules_subsampled/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69d34f6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow_threshold = 1\n",
-    "model = models.CellposeModel(gpu=True, pretrained_model=model_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d05c825a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for test_filename in test_filenames: \n",
-    "    print(\"Starting %s\" % test_filename)\n",
-    "    img = np.load(\"%s/raw/%s.npy\" % (subsampled_ovules_folder, test_filename)) \n",
-    "    masks, _, _ = model.eval(img, do_3D=True, flow_threshold=flow_threshold, channels = [0,0]) \n",
-    "    np.save(\"./results/ovules_subsampled/pipeline/cellpose3d/%s.npy\" % test_filename, masks) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a3dbfb9e",
-   "metadata": {},
-   "source": [
-    "### Generate cellstitch results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce7258f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for test_filename in test_filenames: \n",
-    "    print(\"Starting %s\" % test_filename)\n",
-    "    img = np.load(\"%s/raw/%s.npy\" % (subsampled_ovules_folder, test_filename)) \n",
-    "    \n",
-    "    masks, _, _ = model.eval(list(img), flow_threshold=flow_threshold, channels = [0,0]) \n",
-    "    cellstitch = np.array(masks)\n",
-    "    full_stitch(cellstitch) \n",
-    "    np.save(\"./results/ovules_subsampled/pipeline/cellstitch/%s.npy\" % test_filename, cellstitch) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcc2f3f6",
-   "metadata": {},
-   "source": [
-    "# Benchmark Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "346d213c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = 'ovules_subsampled' # ovules or ovules_subsampled\n",
-    "\n",
-    "ap_threshold = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4de605bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_294_final_crop_ds2.npy\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yining/anaconda3/envs/segmentation/lib/python3.8/site-packages/cellpose/metrics.py:205: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  iou = overlap / (n_pixels_pred + n_pixels_true - overlap)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting N_435_final_crop_ds2.npy\n",
-      "Starting N_441_final_crop_ds2.npy\n",
-      "Starting N_511_final_crop_ds2.npy\n",
-      "Starting N_522_final_crop_ds2.npy\n",
-      "Starting N_590_final_crop_ds2.npy\n",
-      "Starting N_593_final_crop_ds2.npy\n"
-     ]
-    }
-   ],
-   "source": [
-    "method = \"plantseg\" \n",
+    "method = \"cellpose2d\" \n",
+    "ap_threshold = 0.5\n",
     "\n",
     "data = [] \n",
     "for filename in test_filenames:\n",
     "    print(\"Starting %s\" % filename)\n",
     "    labels = np.load('../DATA/%s/labels/%s' % (dataset, filename)) \n",
-    "    true_num_cells = np.unique(labels).size - 1 \n",
-    "    true_avg_vol = get_avg_vol(labels) \n",
     "    \n",
-    "    masks = np.load(\"./results/%s/pipeline/%s/%s\" % (dataset, method, filename))\n",
-    "    \n",
-    "    num_cells = np.unique(masks).size - 1\n",
-    "    d_num_cells = abs(num_cells - true_num_cells) / true_num_cells\n",
-    "\n",
-    "    avg_vol = get_avg_vol(masks)\n",
-    "    d_avg_vol = abs(true_avg_vol - avg_vol) / true_avg_vol\n",
+    "    masks = np.load(\"./results/%s/%s/%s\" % (dataset, method, filename))\n",
     "\n",
     "    ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
     "    precision = tp / (tp + fp)\n",
@@ -623,45 +270,32 @@
     "    \n",
     "    row = [ \n",
     "        filename, \n",
-    "        d_num_cells, \n",
-    "        d_avg_vol, \n",
     "        ap, \n",
     "        tp, \n",
     "        fp, \n",
     "        fn, \n",
     "        precision,\n",
-    "        recall, \n",
-    "        true_num_cells, \n",
-    "        true_avg_vol, \n",
-    "        num_cells, \n",
-    "        avg_vol\n",
+    "        recall\n",
     "    ]\n",
     "    \n",
     "    data.append(row)\n",
     "\n",
     "df = pd.DataFrame(data, columns=[\n",
-    "    \"filename\",  \n",
-    "    \"d_num_cells\", \n",
-    "    \"d_avg_vol\", \n",
+    "    \"filename\",\n",
     "    \"ap\", \n",
     "    \"tp\", \n",
     "    \"fp\", \n",
     "    \"fn\",\n",
     "    \"precision\",\n",
-    "    \"recall\",\n",
-    "    \"true_num_cells\", \n",
-    "    \"true_avg_vol\", \n",
-    "    \"num_cells\", \n",
-    "    \"avg_vol\"\n",
+    "    \"recall\"\n",
     "])\n",
     "\n",
-    "df.to_csv(\"./results/%s/pipeline/%s.csv\" % (dataset, method), index=False)"
+    "df.to_csv(\"./results/%s/%s.csv\" % (dataset, method), index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aface091",
    "metadata": {},
    "outputs": [],
    "source": []
