--- a/notebooks/plant.ipynb
+++ b/notebooks/plant.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "669569e4",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "1025934a",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bff9bfe",
    "metadata": {},
    "source": [
     "# Train cellpose model from scratch"
@@ -37,8 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "dbaae4d0",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7591312a",
    "metadata": {},
    "source": [
     "`python -m cellpose --train --use_gpu --dir ../DATA/<dataset>/cellpose_train --pretrained_model None --n_epochs 100  --verbose`"
@@ -63,7 +58,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d9b0477",
    "metadata": {},
    "source": [
     "###  Generate cellpose3d results"
@@ -71,8 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "1287678b",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "12b6aaf3",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,47 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "2b2e81f9",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Valve_70\n",
-      "Starting Valve_71\n",
-      "Starting Valve_72\n",
-      "Starting Valve_73\n",
-      "Starting Valve_74\n",
-      "Starting Valve_75\n",
-      "Starting Valve_76\n",
-      "Starting Valve_77\n",
-      "Starting Valve_78\n",
-      "Starting Valve_79\n",
-      "Starting Valve_80\n",
-      "Starting Valve_81\n",
-      "Starting Valve_82\n",
-      "Starting Valve_83\n",
-      "Starting Valve_84\n",
-      "Starting Valve_85\n",
-      "Starting Valve_86\n",
-      "Starting Valve_87\n",
-      "Starting Valve_88\n",
-      "Starting Valve_89\n",
-      "Starting Valve_90\n",
-      "Starting Valve_91\n",
-      "Starting Valve_92\n",
-      "Starting Valve_93\n",
-      "Starting Valve_94\n",
-      "Starting Valve_95\n",
-      "Starting Valve_96\n",
-      "Starting Valve_97\n",
-      "Starting Valve_98\n",
-      "Starting Valve_99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(70, 100): \n",
     "    test_filename = \"%s_%02d\" % (dataset, i)\n",
@@ -144,55 +98,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48209051",
    "metadata": {},
    "source": [
-    "## Generate cellstitch results"
+    "### Generate cellpose2d results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "6393a92e",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Valve_70\n",
-      "Starting Valve_71\n",
-      "Starting Valve_72\n",
-      "Starting Valve_73\n",
-      "Starting Valve_74\n",
-      "Starting Valve_75\n",
-      "Starting Valve_76\n",
-      "Starting Valve_77\n",
-      "Starting Valve_78\n",
-      "Starting Valve_79\n",
-      "Starting Valve_80\n",
-      "Starting Valve_81\n",
-      "Starting Valve_82\n",
-      "Starting Valve_83\n",
-      "Starting Valve_84\n",
-      "Starting Valve_85\n",
-      "Starting Valve_86\n",
-      "Starting Valve_87\n",
-      "Starting Valve_88\n",
-      "Starting Valve_89\n",
-      "Starting Valve_90\n",
-      "Starting Valve_91\n",
-      "Starting Valve_92\n",
-      "Starting Valve_93\n",
-      "Starting Valve_94\n",
-      "Starting Valve_95\n",
-      "Starting Valve_96\n",
-      "Starting Valve_97\n",
-      "Starting Valve_98\n",
-      "Starting Valve_99\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "for i in range(70, 100): \n",
+    "    test_filename = \"%s_%02d\" % (dataset, i)\n",
+    "    print(\"Starting %s\" % test_filename)\n",
+    "    img = np.load(\"../DATA/%s/%s.npy\" % (dataset, test_filename))\n",
+    "    masks, _, _ = model.eval(list(img), do_3D=False, flow_threshold=flow_threshold, channels = [0,0])\n",
+    "    masks = cp_utils.stitch3D(np.array(masks))\n",
+    "\n",
+    "    np.save(\"./results/%s/cellpose2d/%s.npy\" % (dataset, test_filename), masks) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate cellstitch results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in range(70, 100): \n",
     "    test_filename = \"%s_%02d\" % (dataset, i)\n",
@@ -215,7 +153,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f86ecdd1",
    "metadata": {},
    "source": [
     "# Benchmark results"
@@ -223,93 +160,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "5446b842",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ap_threshold = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "1c12b21f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yining/anaconda3/envs/segmentation/lib/python3.8/site-packages/cellpose/metrics.py:205: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  iou = overlap / (n_pixels_pred + n_pixels_true - overlap)\n"
-     ]
-    }
-   ],
-   "source": [
-    "methods = [\"cellstitch\", \"cellpose3d\"]\n",
-    "\n",
-    "for method in methods: \n",
-    "    data = [] \n",
-    "    for i in range(70, 100): \n",
-    "        filename = \"%s_%02d\" % (dataset, i)\n",
-    "        labels = np.load('../DATA/%s/%s_masks.npy' % (dataset, filename))\n",
-    "        true_num_cells = np.unique(labels).size - 1 \n",
-    "        true_avg_vol = get_avg_vol(labels) \n",
-    "    \n",
-    "        masks = np.load(\"./results/%s/%s/%s.npy\" % (dataset, method, filename))\n",
-    "\n",
-    "        num_cells = np.unique(masks).size - 1\n",
-    "        d_num_cells = abs(num_cells - true_num_cells) / true_num_cells\n",
-    "\n",
-    "        avg_vol = get_avg_vol(masks)\n",
-    "        d_avg_vol = abs(true_avg_vol - avg_vol) / true_avg_vol\n",
-    "\n",
-    "        ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
-    "        precision = tp / (tp + fp)\n",
-    "        recall = tp / (tp + fn)\n",
-    "    \n",
-    "        row = [\n",
-    "            filename, \n",
-    "            d_num_cells, \n",
-    "            d_avg_vol, \n",
-    "            ap, \n",
-    "            tp, \n",
-    "            fp, \n",
-    "            fn, \n",
-    "            precision,\n",
-    "            recall, \n",
-    "            true_num_cells, \n",
-    "            true_avg_vol, \n",
-    "            num_cells, \n",
-    "            avg_vol\n",
-    "        ]\n",
-    "\n",
-    "        data.append(row)\n",
-    "\n",
-    "    df = pd.DataFrame(data, columns=[\n",
-    "        \"filename\",  \n",
-    "        \"d_num_cells\", \n",
-    "        \"d_avg_vol\", \n",
-    "        \"ap\", \n",
-    "        \"tp\", \n",
-    "        \"fp\", \n",
-    "        \"fn\",\n",
-    "        \"precision\",\n",
-    "        \"recall\",\n",
-    "        \"true_num_cells\", \n",
-    "        \"true_avg_vol\", \n",
-    "        \"num_cells\", \n",
-    "        \"avg_vol\"\n",
-    "    ])\n",
-    "\n",
-    "    df.to_csv(\"./results/%s/%s.csv\" % (dataset, method), index=False)"
+    "ap_threshold = 0.5\n",
+    "method = \"cellpose2d\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a3b42d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [] \n",
+    "for i in range(70, 100): \n",
+    "    filename = \"%s_%02d\" % (dataset, i)\n",
+    "    labels = np.load('../DATA/%s/%s_masks.npy' % (dataset, filename))\n",
+    "\n",
+    "    masks = np.load(\"./results/%s/%s/%s.npy\" % (dataset, method, filename))\n",
+    "\n",
+    "\n",
+    "    ap, tp, fp, fn = average_precision(labels, masks, ap_threshold)\n",
+    "    precision = tp / (tp + fp)\n",
+    "    recall = tp / (tp + fn)\n",
+    "\n",
+    "    row = [\n",
+    "        filename, \n",
+    "        ap, \n",
+    "        tp, \n",
+    "        fp, \n",
+    "        fn, \n",
+    "        precision,\n",
+    "        recall\n",
+    "    ]\n",
+    "\n",
+    "    data.append(row)\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=[\n",
+    "    \"filename\", \n",
+    "    \"ap\", \n",
+    "    \"tp\", \n",
+    "    \"fp\", \n",
+    "    \"fn\",\n",
+    "    \"precision\",\n",
+    "    \"recall\"\n",
+    "])\n",
+    "\n",
+    "df.to_csv(\"./results/%s/%s.csv\" % (dataset, method), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
